<resources>
    <string name="app_name">Aanandam</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Services</string>
    <string name="title_notifications">Notifications</string>
    <string name="accomodations">Accomodations</string>
    <string name="details">Details</string>
    <string name="book_the_room">Book the Room</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>

    <string name="name">Name</string>
    <string name="or_register_with_email">or, register with email...</string>
    <string name="login">Login</string>
    <string name="or_login_with">or, Login with</string>
    <string name="new_here">New Here ?</string>
    <string name="register">Register</string>
    <string name="forgot">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="employee_login_here">Employee Login Here</string>
    <string name="employee_login">Employee Login</string>
    <string name="google">Google</string>
    <string name="discover">Discover</string>
    <string name="services">Services</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="person">Person</string>
    <string name="life_simple">Life Simple</string>
    <string name="let_s_make_our">Let\'s Make Our</string>
    <string name="service_image">Service image</string>
    <string name="book_service">Book Service</string>
    <string name="popular_services">Popular Services</string>
    <string name="hospital_service">Hospital Service</string>
    <string name="service_symbol">Service Symbol</string>
    <string name="marriage_visit">Marriage Visit</string>
    <string name="never_miss_a_marriage">Never miss a marriage</string>
    <string name="room">Room</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hang_on">Hang On!!</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="all_services">All Services</string>
    <string name="phone_number">Phone Number</string>
    <string name="pick_up_address">Pick Up Address</string>
    <string name="extra_description">Extra Description</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="payment_details">Payment Details</string>
    <string name="total">Total</string>
    <string name="payment">Payment</string>
    <string name="subscribe">Subscribe</string>
    <string name="book">Book</string>
    <string name="continue_with">Continue with...</string>
    <string name="forgot_pass_desc">Enter your email address for the verification process. Check your email and process further.</string>
    <string name="continue_btn">Continue</string>
    <string name="forgot_npassword">Forgot \nPassword</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title">Title</string>
    <string name="submit">Submit</string>
    <string name="apply_for_leave">Apply For Leave :</string>
    <string name="joined">Joined</string>
    <string name="back_btn">Back Btn</string>
    <string name="_1_person">1 Person</string>
    <string name="_2_person">2 Person</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="book_the_service">Book the Service</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
</resources>