<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.ForgotPasswordFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="0dp"
        android:layout_height="@dimen/image_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/forget_password_animation"
        app:lottie_url="REPLACE_JSON_URL" />

    <TextView
        android:id="@+id/tvLogin"
        style="@style/DarkGreenTextBold32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:text="@string/forgot_npassword"
        app:layout_constraintBottom_toTopOf="@id/tvForgotDesc"
        app:layout_constraintTop_toBottomOf="@id/lottieAnimationView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvForgotDesc"
        style="@style/MediumGreenTextRegular14"
        android:layout_width="0dp"
        android:minLines="2"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_12"
        android:text="@string/forgot_pass_desc"
        app:layout_constraintBottom_toTopOf="@+id/tilEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_19"
        android:hint="@string/email_id"
        android:textColorHint="@color/light_brown"
        app:boxBackgroundColor="@android:color/transparent"
        app:hintTextColor="@color/light_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnContinue"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotDesc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/DarkGreenTextRegular16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/margin_12"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        style="@style/WhiteTextBold18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginVertical="@dimen/_18sdp"
        android:backgroundTint="@color/light_brown"
        android:padding="@dimen/_10sdp"
        android:text="@string/continue_btn"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/_30sdp"
        app:elevation="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>